static/css/style.css
/* ... */
sup {
	/*position: relative; top: -4px; left: 1px;*/
	/*opacity: 0.4;	*/
}

/* ================= Sidebar ================= */

#sidebar {
	position: fixed;
	top: 0; left: 0; bottom: 0; z-index: 20;
	width: 260px; height: 100%;
	background: #1E2229;
	padding: 60px;
	overflow-y: auto;
}

#gradientbar {
	position: fixed; left: 280px; height: 100%;
	width: 3px; top: 0; min-height: 100%;
	background: #84f2ff; /* Old browsers */
	background: -moz-linear-gradient(top,  #84f2ff 0%, #84bbff 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#84f2ff), color-stop(100%,#84bbff)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  #84f2ff 0%,#84bbff 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  #84f2ff 0%,#84bbff 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  #84f2ff 0%,#84bbff 100%); /* IE10+ */
	background: linear-gradient(to bottom,  #84f2ff 0%,#84bbff 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#84f2ff', endColorstr='#84bbff',GradientType=0 ); /* IE6-9 */
	display: none;
}

#sidebar ul {
	list-style: none;
}

#sidebar nav {
	padding-bottom: 60px;
}

#sidebar ul {
	margin-bottom: 50px;
}

#sidebar ul:first-child, #sidebar ul:nth-child(2) {
	margin-bottom: 35px;
}

#sidebar ul li+li {
	margin-top: 8px;
}

#sidebar ul li a {
	color: #737a84;
	font-weight: 300;
	font-size: 14px;
	position: relative;
}

/* Fade other nav items */
#sidebar ul li a:hover {
	opacity: 1;
	color: #fff;
}

#sidebar ul li a.active {
	color: #fff; 
}

#sidebar ul li.headline, #sidebar ul li.headline a {
	color: #84D1FF;
	font-weight: 500; 
	font-size: 15px;
	margin-bottom: 15px;
}

#sidebar ul li.headline a:hover {
	color: #fff;
}

#sidebar ul li.headline a.active {
	color: #fff;
}

#topbar {
	display: none;
}

/* ================= Helpers ================= */

.center {
	text-align: center;
	margin: 0 auto;
}

a[name] {
	position: relative; top: -60px;
	display: block;
}

/* ================= Customs scrollbar ================= */

::-webkit-scrollbar {
	background: rgba(255,255,255,1);
	box-shadow: inset 1px 0 0 rgba(255,255,255,.1);
	width: 0px;
}
 
::-webkit-scrollbar-track {
}
 
::-webkit-scrollbar-thumb {
	background: rgba(255,255,255,.4);
	background: rgba(0,0,0,.1);
	box-shadow: inset 0 0 0 2px rgba(255,255,255,1);
	border-radius: 6px;
}

/* ================= Post elements ================= */

table {
	width:100%;
	border-collapse: separate;
	font-size:15px;
	line-height:1.4;
	border: 1px solid #eee;
	border-radius: 6px;
	overflow: hidden;
}

table td, td {
	border-spacing:none; border-style:solid;
	padding:10px 15px; color: #999;
}

tr>td {
	border-top:1px solid #eee;
}

td {
	position: relative;
}

/*Not sure if this is cleanest possible solution..*/
td:after {
	content: ""; display: inline-block;
	width: 140%; height: 1px; 
	background: #eee; position: absolute; top: -1px; right: -200px;
}

thead th, th {
	text-align:left;
	padding:10px 15px;
	font-size:15px; font-weight:300;
	color:#aaa; cursor:default; white-space:nowrap;
	background: #fcfcfc;
	line-height: 1.2; 
	border-radius: 6px 6px 0 0 ;
}

table a {
	text-align: right;
	display: inline-block;
}

table .dim {
	color: #999;
}

table.api td:first-child {
	color: #444; 
}

table.api td.group {
	font-weight: 500;
	text-transform: uppercase;
	font-size: 12px; padding-top: 14px;
	color: #2;
	letter-spacing: 1px;
	line-height: 2;
	background: #fff;
}
#wrapper table ul {
	margin-top: 20px;
}

#wrapper table ul li {
	font-size: 13px; line-height: 1.6;
	padding-left: 10px;
}

/* ================= Typography ================= */

img {
	display: inline-block;
}

#icon {
	float: left;
	margin-right: 30px;
	margin-top: -10px;
}

/* Fonts to be smoothed */
h1, h2 strong, h3, strong, .headline {
	-webkit-font-smoothing:antialiased;
}

h1 {
	font-size: 30px; line-height: 1.4;
	font-weight: 300;
	color: #222;
	white-space: nowrap;
}

h1.title {
	font-size: 17px;
	text-transform: uppercase;
	font-weight: 600;
	color: #222;
	margin-bottom: 40px;
	float: left;
	left: 0; letter-spacing: 0;
}

h1.title span {
	opacity: 0.5;	font-weight:400;
	text-transform: none;
	letter-spacing: -1px;
	margin-left: 2px;
}

h2 {
	font-size: 40px; line-height: 1.6;
	font-weight: 400; -webkit-font-smoothing: antialiased;
	color: #222; margin-bottom: 20px;
}

/*Index page h2*/
h2.headline {
	font-size: 20px; line-height: 1.8;
	font-weight: 300;
	color: #666;
	margin-bottom: 60px;
	-webkit-font-smoothing: subpixel-antialiased;
}

h3 {
	font-size: 22px; font-weight: 500;
	color: #222; margin-bottom: 30px;
	-webkit-font-smoothing: antialiased-antialiased;
}

h4 {
	font-size: 15px; font-weight: 500;
	color: #222; margin-bottom: 15px;
	text-transform: uppercase;
	letter-spacing: 1px;
}

#wrapper li {
	line-height: 1.8;
	font-size: 15px;
	color: #888;
	list-style-type: circle; 
	position: relative; left: 18px;
	padding-left: 8px;
}

#wrapper li+li {
	margin-top: 8px;
}

#wrapper li ul li {
	list-style-type: none;
	padding: 0; left: 0; line-height: 1.4;
	margin-top: 5px;
}

/* ================= Content ================= */

nav#index {
	float: right;
	-webkit-font-smoothing: antialiased;
}

nav#index a {
	font-size: 15px;
	font-weight: 500;
}

nav#index a+a {
	margin-left: 20px;
}

ul#features li {
	float: left;
	max-width: 260px;
	list-style: none;
	padding-left: 40px;
}

ul#features li img {
	float: left;
	position: relative; top: -0;
	margin-right:0px;
	margin-left: -55px;
}

ul#features li+li { margin-top: 0; }
ul#features li:before { display: none; }

ul#features li:nth-child(even) {
	float: right;
}


/* Examples */

#examples a:hover {
	opacity: 1;
}

#phone {
	width:368px; 
	height:760px;
	background-image:url('/static/images/examples/iphone.png');
	box-shadow: 0 1px 3px rgba(0,0,0,.1), 0 0 0 1px rgba(0,0,0,.075);
	border-radius: 50px;
	position: relative;
}
/* ... */

